--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
+{<img src="https://travis-ci.org/hazah/budget.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/hazah/budget]
+
 == README
 
 This README would normally document whatever steps are necessary to get the
